tests/purs/failing/CoercibleRepresentational8.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational8.purs:9:16 - 9:22 (line 9, column 16 - line 9, column 22)

  No type class instance was found for
  [33m                          [0m
  [33m  Prim.Coerce.Coercible a0[0m
  [33m                        b1[0m
  [33m                          [0m

while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33ma0 -> b1[0m
while checking that expression [33mcoerce[0m
  has type [33ma0 -> b1[0m
in value declaration [33munsafeCoerce[0m

where [33ma0[0m is a rigid type variable
        bound at (line 9, column 16 - line 9, column 22)
      [33mb1[0m is a rigid type variable
        bound at (line 9, column 16 - line 9, column 22)

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

